src/test/ui/parser/underscore-suffix-for-float.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore-suffix-for-float.rs:4:16
   |
LL |     let a = 42._; //~ ERROR expected identifier, found reserved identifier `_`
   |                ^ expected identifier, found reserved identifier

error: aborting due to previous error

